@@ -19,6 +19,8 @@
 - Added slider control to qtplugin
 - Made graphics mode configurable
 - Added preferences tab and removed some of the options from the menu
+- Fixed a bug where changes to the "Run if" statement weren't automatically applied
+- Added splash screen
 
 0.22 "Axiomatic Axelrod"
 - Added search capabilities to inline_editor and a notification of unapplied changes
